--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block title %}
     <title>News Point</title>
-    {% endblock %} 
+    {% endblock %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,17 +20,47 @@
     ></script>
   </head>
   <body>
-    <div class="nav-bar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid d-flex justify-content-around">
+        <a class="navbar-brand" href="#">News Point</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-flex justify-content-lg-around"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item mx-lg-5">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item mx-lg-5">
+              <a class="nav-link" href="#">Trending</a>
+            </li>
+            <li class="nav-item mx-lg-5">
+              <a class="nav-link" href="#">Sources</a>
+            </li>
+            <li class="nav-item mx-lg-5">
+              <a class="nav-link">Favorite</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-      <ul class=nav>
+    {% block header %} {% endblock %}
+    <div class="row">
+      <div class="col-lg-2">dsfudshf</div>
 
-        <li>Source</li>
-        <li>Source</li>
-        <li>Source</li>
-        <li>Source</li>
-        <li>Source</li>
-      </ul>
+      <div class="col-lg-10 px-5">{% block content %} {% endblock %}</div>
     </div>
-    {% block header %} {% endblock %} {% block content %} {% endblock %}
   </body>
 </html>
