--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid d-flex justify-content-around">
         <a class="navbar-brand" href="#">News Point</a>
         <button
@@ -35,7 +35,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse d-flex justify-content-lg-around"
+          class="collapse navbar-collapse d-lg-flex justify-content-lg-around"
           id="navbarNav"
         >
           <ul class="navbar-nav">
@@ -57,10 +57,10 @@
     </nav>
 
     {% block header %} {% endblock %}
-    <div class="row">
-      <div class="col-lg-2">dsfudshf</div>
+    <div class="row container-fluid mt-5 pt-3">
+      <div class="col-lg-2 position-fixed bg-secondary vh-100 mb-2">dsfudshf</div>
 
-      <div class="col-lg-10 px-5">{% block content %} {% endblock %}</div>
+      <div class="col-lg-10 px-5 offset-lg-2">{% block content %} {% endblock %}</div>
     </div>
   </body>
 </html>
