--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p class="text-danger"> Welcome to the News today</p>
+<h3 class="fw-bold"> Welcome to the News today - {{date_today}}</h3>
+<hr>
+<div class="container news-sources">
+  <div class="d-inline-block
+   ">
+  {%for source in news_sources[:25]: %}
+    <span class="badge fw-bold text-dark bg-light m-2"><h5>{{source.name}}</h5></span>
+    {% endfor %}
+  </div>
+</div>
 
 {%for source in news_sources[:50]: %}
 <ul>
 
   <li>{{source.name}}</li>
+  <li>{{source.url}}</li>
 </ul>
 
 {% endfor %}
