--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
   <div class="d-inline-block
    ">
   {%for source in news_sources[:25]: %}
-    <span class="badge fw-bold text-dark bg-light m-2"><h5>{{source.name}}</h5></span>
+      <a href="/source/{{source.id}}"><span class="badge fw-bold text-dark bg-light m-2"><h5>{{source.name}}</h5></span></a>
     {% endfor %}
   </div>
 </div>
