--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='css/main.css')}}"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -23,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid d-flex justify-content-around">
-        <a class="navbar-brand" href="#">News Point</a>
+        <a class="navbar-brand" href="/">News Point</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,21 +61,34 @@
     </nav>
 
     {% block header %} {% endblock %}
-    <div class="row container-fluid mt-5 pt-3">
-      <div class="col-lg-2 position-fixed bg-secondary vh-100 rounded-2 d-lg-flex d-sm-none">
-        
-        <ul>
-          <li>Breaking News</li>
-          <li>Politics</li>
-          <li>Education</li>
-          <li>Business</li>
-          <li>Global</li>
-          <li>Sports</li>
-        </ul>
-      
-      </div>
+    <div class="container-fluid">
+      <div class="row container-fluid mt-5 pt-3">
+        <div
+          class="col-lg-2 position-fixed bg-light rounded-2 d-lg-flex d-sm-none"
+        >
+          <ul>
+            <li>Breaking News</li>
+            <li>Politics</li>
+            <li>Education</li>
+            <li>Business</li>
+            <li>Global</li>
+            <li>Sports</li>
+          </ul>
+        </div>
 
-      <div class="col-lg-10 px-5 offset-lg-2">{% block content %} {% endblock %}</div>
+        <div class="col-lg-10 px-5 offset-lg-2">
+          {% block content %} {% endblock %}
+        </div>
+      </div>
     </div>
+      <div class="container-fluid bg-dark footer" >
+        
+        <p class="text-center text-white  mt-5 pt-5">
+          &copy; 2021 Francis Githae Credits: News API
+        </p>
+    
+      </div>
+ 
+    
   </body>
 </html>
