--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -6,7 +6,7 @@ news_from_source[:20]: %}
 <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="..." />
+      <img src="{{news_article.image_url}}" class="img-fluid rounded-start" alt="..." />
     </div>
     <div class="col-md-8">
       <div class="card-body">
