add time conversion for article publication date

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,7 +64,7 @@
     <div class="container-fluid">
       <div class="row container-fluid mt-5 pt-3">
         <div
-          class="col-lg-2 position-fixed bg-light rounded-2 d-lg-flex d-sm-none"
+          class="col-lg-2 position-fixed bg-light rounded-2 d-none d-lg-flex d-sm-None d-sm-none"
         >
           <ul>
             <li>Breaking News</li>
