--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -18,7 +18,7 @@ news_from_source[:20]: %}
           >
         </p>
         <p class="card-text">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <small class="text-muted">{{news_article.publication_date}}</small>
         </p>
       </div>
     </div>
