--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-10 px-5 offset-lg-2">
+        <div class="col-lg-10 px-lg-5 offset-lg-2 col-sm-12 col-md-12">
           {% block content %} {% endblock %}
         </div>
       </div>
