--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
         <div
           class="col-lg-2 position-fixed bg-light rounded-2 d-none d-lg-flex d-sm-None d-sm-none"
         >
-          <ul>
+          <ul class="categories list-unstyled">
             <li>Breaking News</li>
             <li>Politics</li>
             <li>Education</li>
