--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,12 +67,12 @@
           class="col-lg-2 position-fixed bg-light rounded-2 d-none d-lg-flex d-sm-None d-sm-none"
         >
           <ul class="categories list-unstyled">
-            <li>Breaking News</li>
-            <li>Politics</li>
-            <li>Education</li>
-            <li>Business</li>
-            <li>Global</li>
-            <li>Sports</li>
+            <li><a href=""> Breaking News</a></li>
+            <li><a href=""> Politics</li></a>
+            <li><a href=""> Education</li></a>
+            <li><a href=""> Business</li></a>
+            <li> <a href=""> Global</li></a>
+            <li> <a href=""> Sports</li></a>
           </ul>
         </div>
 
