add request to fetch news by category

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,13 +66,17 @@
         <div
           class="col-lg-2 position-fixed bg-light rounded-2 d-none d-lg-flex d-sm-None d-sm-none"
         >
+        
           <ul class="categories list-unstyled">
-            <li><a href=""> Breaking News</a></li>
-            <li><a href=""> Politics</li></a>
-            <li><a href=""> Education</li></a>
-            <li><a href=""> Business</li></a>
-            <li> <a href=""> Global</li></a>
-            <li> <a href=""> Sports</li></a>
+            <h6 class="mt-3">Category</h6>
+            <hr>
+            <li><a href="/category/general"> General</a></li>
+            <li><a href="/category/business"> Business</li></a>
+            <li><a href="/category/health">Health</li></a>
+            <li><a href="/category/technology"> Technology</li></a>
+            <li> <a href="/category/science"> Science</li></a>
+            <li> <a href="/category/sports"> Sports</li></a>
+            <li> <a href="/category/entertainment"> Entertainment</li></a>
           </ul>
         </div>
 
