add style to link tags

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,7 @@
   </div>
   <div class="card-text">
     <p>{{headline.content | truncate(100)}}   <a href="{{headline.url}}" target="_blank"><span class="badge bg-primary">Read</span></a></p>
+    <p class="fw-bold">~ <a href="/source/{{headline.source_id}}"> {{headline.source_name}} </a></p>
   </div>
 </div>
 
