--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,7 @@
     ></script>
   </head>
   <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid d-flex justify-content-around">
         <a class="navbar-brand" href="/">News Point</a>
@@ -44,22 +45,23 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item mx-lg-5">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item mx-lg-5">
-              <a class="nav-link" href="#">Trending</a>
+              <a class="nav-link" href="/category/general">Trending</a>
             </li>
             <li class="nav-item mx-lg-5">
-              <a class="nav-link" href="#">Sources</a>
+              <a class="nav-link" href="/sources">Sources</a>
             </li>
             <li class="nav-item mx-lg-5">
-              <a class="nav-link">Favorite</a>
+              <a class="nav-link" href="/">Favorite</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    
     {% block header %} {% endblock %}
     <div class="container-fluid">
       <div class="row container-fluid mt-5 pt-3">
