--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container-fluid d-flex justify-content-around">
+      <div class="container-fluid d-flex justify-lg-content-around">
         <a class="navbar-brand" href="/">News Point</a>
         <button
           class="navbar-toggler"
@@ -64,7 +64,7 @@
     
     {% block header %} {% endblock %}
     <div class="container-fluid">
-      <div class="row container-fluid mt-5 pt-3">
+      <div class="row mt-5 pt-3 px-sm-0">
         <div
           class="col-lg-2 position-fixed bg-light rounded-2 d-none d-lg-flex d-sm-None d-sm-none"
         >
@@ -82,7 +82,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-10 px-lg-5 offset-lg-2 col-sm-12 col-md-12">
+        <div class="col-lg-10 px-lg-5 px-sm-0 offset-sm-0 offset-lg-2 col-sm-12 col-md-12">
           {% block content %} {% endblock %}
         </div>
       </div>
