--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,9 @@
 {% block content %}
 <h3 class="fw-bold"> Welcome to the News today - {{date_today}}</h3>
 <hr>
+{% if category %}
+<p class="text-center fw-bold fs-4">{{category[0]|upper}}{{category[1:]}} News</p>
+{% endif %}
 {% if news_sources %}
 <div class="container news-sources">
   <div class="d-lg-inline-block
